RESOLVED FIXED200051
Web Inspector: REGRESSION: Overlay: highlighting a ::before/::after shows the node info of the parent instead
https://bugs.webkit.org/show_bug.cgi?id=200051
Summary Web Inspector: REGRESSION: Overlay: highlighting a ::before/::after shows the...
Devin Rousso
Reported 2019-07-23 15:23:40 PDT
# STEPS TO REPRODUCE: 1. inspect any page 2. find a ::before/::after in the DOM tree of the Elements tab 3. hover over the ::before/::after => the node info "box" that is shown on the page has details about the parent node, instead of the ::before/::after
Attachments
Patch (4.29 KB, patch)
2019-07-23 15:42 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2019-07-23 15:42:45 PDT
Devin Rousso
Comment 2 2019-07-23 15:43:25 PDT
Comment on attachment 374721 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=374721&action=review > Source/WebCore/inspector/InspectorOverlay.cpp:288 > + Frame* containingFrame = node.document().frame(); This was previously checked by `WebCore::effectiveElementForNode`, but since that's no longer called, we should check it here.
Joseph Pecoraro
Comment 3 2019-07-24 16:55:50 PDT
Comment on attachment 374721 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-07-24 17:52:16 PDT
Comment on attachment 374721 [details] Patch Clearing flags on attachment: 374721 Committed r247805: <https://trac.webkit.org/changeset/247805>
WebKit Commit Bot
Comment 5 2019-07-24 17:52:17 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-07-24 17:54:19 PDT
Note You need to log in before you can comment on or make changes to this bug.