Web Inspector: REGRESSION: Overlay: highlighting a ::before/::after shows the node info of the parent instead https://bugs.webkit.org/show_bug.cgi?id=200051

Reviewed by Joseph Pecoraro.

When highlighting a pseudo-element, only use the parent node for selector information. All
rendering data should still come from the pseudo-element itself.

* inspector/InspectorOverlay.cpp:
(WebCore::drawShapeHighlight):
(WebCore::InspectorOverlay::drawElementTitle):


Canonical link: https://commits.webkit.org/213930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247805 268f45cc-cd09-0410-ab3c-d52691b4dbfc